--- a/package.json
+++ b/package.json
@@ -3,15 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/user-event": "^12.1.5",
     "bundle": "^2.1.0",
     "d3": "^6.1.1",
+    "d3-array": "^2.7.1",
+    "d3-axis": "^2.0.0",
+    "d3-brush": "^2.1.0",
+    "d3-drag": "^2.0.0",
+    "d3-force": "^2.1.1",
+    "d3-geo": "^2.0.1",
+    "d3-scale": "^3.2.2",
+    "d3-selection": "^2.0.0",
+    "d3-shape": "^2.0.0",
+    "d3-svg-legend": "^2.25.6",
+    "d3-tip": "^0.9.1",
+    "d3-transform": "^1.0.5",
+    "d3-transition": "^2.0.0",
+    "d3-zoom": "^2.0.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-sidebar": "^3.0.2",
+    "react-spinners": "^0.9.0",
+    "react-tabs": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start --watch --watch-poll",
